[tool.poetry]
name = "finalproject-stoyalovsky-konstantin-m25-555"
version = "0.1.0"
description = ""
authors = ["Konstantin S. <kosta_terr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []