[tool.poetry]
name = "finalproject-stoyalovsky-konstantin-m25-555"
version = "0.1.0"
description = ""
authors = ["Konstantin S. <kosta_terr@mail.ru>"]
readme = "README.md"
packages = [
     { include = "valutatrade_hub", from = "." },
 ]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
requests = "^2.32.5"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
